--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+/img/
+/mail/
+/less/
+/fonts/
+/font-awesome/
+/LICENSE
+/README.md
